# djinni-generator

./: .gitignore  BUILD.bazel  WORKSPACE.bazel
.github/workflows/: main.yaml
src/it/scala/djinni/: IntegrationTest.scala
